fixed the overflow-x issue, look out for more width-related bugs

--- a/web/client/css/styles.css
+++ b/web/client/css/styles.css
@@ -218,7 +218,7 @@ a, a:hover, a:visited{
     position:absolute;
     /*top:30px;*/
     z-index:10;
-    width:100%;
+    width:33.2%;
     height:85%;
     margin:auto;
     margin-top:5px;
@@ -772,6 +772,7 @@ h1{
     body{
         height:100%;
         width:100%;
+        overflow-x: hidden;
         margin:0px;
         padding:0px;
     }
@@ -807,21 +808,19 @@ h1{
 
     .panel2Center{
         /*left:-100%;*/
-        -webkit-transform: translate3d(-33.3%,0,0);
+        -webkit-transform: translate3d(-33.2%,0,0);
     }
 
     .panel3Center{
         /*left:-200%;*/
-        -webkit-transform: translate3d(-66.6%,0,0);
+        -webkit-transform: translate3d(-66.4%,0,0);
     }
 
     .panel{
-        position: relative;
-        top:0px;
-        left:0px;
+        float:left;
         z-index:50;
         font-size: 1em;
-        width:33.0%;
+        width:33.2%;
         height:100%;
         display:inline-block;
         vertical-align: top;
